# Lania

./: GitHubPages.css  LICENSE  Lania.sln  LaniaEngine.sln  README.md  index.html
Data/: gamecontrollerdb.txt
Data/Scripts/: GenerateDemoProject.py
Demos/Basic/: Engine.cfg  Init.cfg
Demos/Development/: Engine.cfg  Lania.cfg
Demos/IncrementTest/: Init.cfg
Demos/IsleFightPrototypeReplica/: Init.cfg
Demos/PhysicsTest/: Init.cfg
Demos/SpriteTest/: Init.cfg
Documentation/: Architecture.md  EntityComponentSystem.md  Initial configuration.txt  Lania Scenes.txt  Lania file format.txt  LaniaScript.txt
Lania Engine/: Lania Engine.vcxproj  Lania Engine.vcxproj.filters  main.cpp
Lania Engine/Kernel/: Initialization.cpp  Initialization.hpp  LaniaEngine.cpp  LaniaEngine.hpp  Performance.cpp  Performance.hpp  RuntimeData.hpp  Shutdown.cpp  Shutdown.hpp  SimulationLoop.cpp  SimulationLoop.hpp  Timer.cpp  Timer.hpp
LaniaEngine/: Constants.hpp  Definitions.hpp  Lania Engine.vcxproj  Lania Engine.vcxproj.filters  LaniaConfig.cfg  LaniaEngine.vcxproj  LaniaEngine.vcxproj.filters  TemporarySceneTesting.cpp  TemporarySceneTesting.hpp  main.cpp
LaniaEngine/AIEngine/: AIEngine.hpp
LaniaEngine/Application/: Application.cpp  Application.hpp
LaniaEngine/Audio/: AudioSDL.cpp  AudioSDL.hpp
LaniaEngine/AudioEngine/: AudioEngine.hpp
LaniaEngine/Core/: Application.hpp  CommandLine.cpp  CommandLine.hpp  Configuration.cpp  Configuration.hpp  Core.hpp  Engine.hpp  EngineConfiguration.cpp  EngineConfiguration.hpp  EngineData.hpp  Events.cpp  Events.hpp  File.cpp  File.hpp  FileSystem.hpp  Input.hpp  Lania.cpp  LaniaEngine.cpp  LaniaEngine.hpp  Logging.cpp  Logging.hpp  Mathematics.hpp  Networker.hpp  Output.hpp  Performance.hpp  Platform.hpp  RuntimeData.hpp  Timer.cpp  Timer.hpp  Timing.cpp  Timing.hpp  UI.hpp  UnitTesting.cpp  UnitTesting.hpp  main.cpp
LaniaEngine/Events/: EventSystem.cpp  EventSystem.hpp
LaniaEngine/Input/: InputSystem.hpp  Keyboard.cpp  Keyboard.hpp
LaniaEngine/Interpreter/: Interpreter.hpp
LaniaEngine/Kernel/: EngineConfiguration.cpp  EngineConfiguration.hpp  FileSystem.cpp  FileSystem.hpp  LaniaEngine.cpp  LaniaEngine.hpp  Performance.cpp  Performance.hpp  RuntimeData.hpp  Timer.cpp  Timer.hpp
Scripts/: GenerateDemoProject.py
Source/Lania/: Lania.cpp  (+10 more)
docs/: index.html
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  splash_screen_transition.cpp  splash_screen_transition.hpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/engine/systems/rendering_system/: high_level_renderer.hpp  low_level_renderer.hpp  rendering_api.hpp  rendering_api_type.hpp  rendering_context.hpp  rendering_context_type.hpp  rendering_system.hpp
src/engine/systems/rendering_system/opengl_rendering_api/: opengl_rendering_api.cpp  opengl_rendering_api.hpp
src/engine/systems/rendering_system/opengl_rendering_context/: opengl_rendering_context.cpp  opengl_rendering_context.hpp
src/main/: CMakeLists.txt
src/main/application/: main.cpp
src/main/application_high_performance_gpu/: main.cpp
src/main/steam_application_high_performance_gpu/: main.cpp
(+339 files in other folders)
